--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "docker:build": "docker build -t eventlite-client .",
+    "docker:run": "docker run -p 5173:5100 eventlite-client",
+    "docker:push": "docker build -t praveenbaghelmaurya/eventlite-client . && docker push praveenbaghelmaurya/eventlite-client",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
-    "@tailwindcss/vite": "^4.1.17",
     "@types/react-router-dom": "^5.3.3",
     "arctic": "^3.7.0",
     "axios": "^1.13.2",
@@ -24,11 +26,11 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
